--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,8 @@ html,
 body {
   padding: 0;
   margin: 0;
+  height: 100vh;
+  width: 100vw;
 }
 
 a {
@@ -15,4 +17,38 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+#content {
+  width: 100vw;
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+}
+
+#home,
+#about,
+#projects,
+#resources {
+  flex: none;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  scroll-snap-align: start;
+}
+
+#home {
+  background-image: url("../assets/home-bg.png");
+  background-size: cover;
+}
+
+#about,
+#resources {
+  background-image: url("../assets/about-bg.png");
+  background-size: cover;
+}
+
+#projects {
+  background-image: url("../assets/project-bg.png");
+  background-size: cover;
 }
