--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,8 @@ html,
 body {
   padding: 0;
   margin: 0;
-  height: 100vh;
-  width: 100vw;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -19,6 +19,11 @@ a {
   box-sizing: border-box;
 }
 
+textarea:focus,
+input:focus {
+  outline: none;
+}
+
 #content {
   width: 100vw;
   height: 100vh;
@@ -28,7 +33,8 @@ a {
 
 #home,
 #about,
-#resources {
+#contact,
+#projects {
   flex: none;
   width: 100vw;
   height: 100vh;
@@ -37,34 +43,133 @@ a {
 }
 
 #projects {
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+}
+
+#project {
+  position: relative;
   flex: none;
-  width: 100vw;
   display: flex;
   scroll-snap-align: start;
+  height: 100%;
+  width: 100%;
 }
 
 #home {
-  background-image: url("../assets/home-bg.png");
+  background-image: url("../public/home-bg.png");
   background-size: cover;
 }
 
 #about,
-#resources {
-  background-image: url("../assets/about-bg.png");
+#contact {
+  background-image: url("../public/about-bg.png");
   background-size: cover;
 }
 
 #projects {
-  background-image: url("../assets/project-bg.png");
+  background-image: url("../public/project-bg.png");
   background-size: cover;
 }
 
-.projectImg {
-  border-radius: 10px;
+#circle {
+  height: 15px;
+  width: 15px;
+  border-radius: 100%;
+  background-color: #f6dcfd;
+  cursor: pointer;
 }
 
-#active {
-  border-bottom: 4px solid $accent;
+#circle:hover {
+  scale: 1.2;
+}
+
+.active {
+  outline: 3px solid #a049b6;
+  outline-offset: 5px;
   transition: 0.2s ease-in-out;
-  background: black;
+}
+
+@media only screen and (max-width: 640px) {
+  #home {
+    background-image: url("../public/homebg-sm.png");
+    background-size: cover;
+  }
+  #about,
+  #contact {
+    background-image: url("../public/aboutbg-sm.png");
+    background-size: cover;
+  }
+  #projects {
+    background-image: url("../public/projectbg-sm.png");
+    background-size: cover;
+  }
+  #pageComponentContent {
+    padding: 0px 2vw 0px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #home {
+    background-image: url("../public/homebg-md.png");
+    background-size: cover;
+  }
+  #about,
+  #contact {
+    background-image: url("../public/aboutbg-md.png");
+    background-size: cover;
+  }
+  #projects {
+    background-image: url("../public/projectbg-md.png");
+    background-size: cover;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  #home {
+    background-image: url("../public/homebg-lg.png");
+    background-size: cover;
+  }
+  #about,
+  #contact {
+    background-image: url("../public/aboutbg-lg.png");
+    background-size: cover;
+  }
+  #projects {
+    background-image: url("../public/projectbg-lg.png");
+    background-size: cover;
+  }
+}
+
+.active {
+  color: blue;
+}
+
+.unactive {
+  color: red;
+}
+
+@media only screen and (min-width: 640px) {
+  #pageComponentContent {
+    padding: 0px 2vw 0px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  #pageComponentContent {
+    padding: 0px 2vw 0px;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  #pageComponentContent {
+    padding: 0px 10vw 0px;
+  }
+}
+@media only screen and (min-width: 1280px) {
+  #pageComponentContent {
+    padding: 0px 10vw 0px;
+  }
+}
+@media only screen and (min-width: 1536px) {
+  #pageComponentContent {
+    padding: 0px 20vw 0px;
+  }
 }
